# libngs

./: AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.in
doc/: Makefile.am  manual.tex
src/: Makefile.am  bsq.c  bsq_flex.h  bsq_flex.l  bsq_flex_line.l  bsq_flex_ugly.l  bsq_summary.c  fasta.c  fasta.h  fasta_flex.l  fastq.c  fastq.h  fastq2fasta.c  fastq_flex.h  fastq_flex.l  fastq_flex_ugly.l  fastq_utils.h  letter_qual.c  lex.FlexBsqUgly_.c  make_qual_table.py
src/libngs/: Makefile.am  make_qual_table.py  make_revcomp_table.py  ngs_binseq.c  ngs_binseq.h  ngs_binseq_tables.c  ngs_bsq.c  ngs_bsq.h  ngs_bsq_flex.h  ngs_bsq_flex.l  ngs_bsq_flex_line.l  ngs_bsq_flex_ugly.l  ngs_fasta.c  ngs_fasta.h  ngs_fasta_flex.h  ngs_fasta_flex.l  ngs_fastq.c  ngs_fastq.h  ngs_fastq_flex.h  ngs_fastq_flex.l  ngs_fastq_flex_ugly.l  ngs_fastq_qual_tables.c  ngs_fastq_utils.c  ngs_kmerhash.c  ngs_kmerhash.h  ngs_memalloc.c  ngs_memalloc.h  ngs_methylation.c  ngs_methylation.h  ngs_seq_db.c  ngs_seq_db.h  ngs_utils.c  ngs_utils.h
src/pipelines/: Makefile.am  trimming.sh.in
src/scripts/: Makefile.am  assembly_stats.py  extract_CG_contig.py  fastq_sample_mate_pairs.sh.in  interleave.py  kmer_counts.py  methratio2gff.py  methratios2table.py  plot_coverage.R  plot_qual.R  quality_assessment.sh.in  table2fastq.py
src/test/: Makefile.am  test_binseq.c  test_cg.c  test_fasta.c  test_fasta_iter.c  test_fastq_iter.c
