## Process this file with automake to produce Makefile.in

SUBDIRS =		\
	src

EXTRA_DIST =		\
	autogen.sh

MAINTAINERCLEANFILES =	\
	Makefile.in	\
	aclocal.m4	\
	compile		\
	config.guess	\
	config.h.in	\
	config.log	\
	config.sub	\
	configure	\
	depcomp		\
	install-sh	\
	ltmain.sh	\
	missing		\
	mkinstalldirs	\
	stamp-h.in
