ACLOCAL_AMFLAGS = -I build

SUBDIRS = \
	src

EXTRA_DIST = \
	autogen.sh

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	config.h.in \
	config.log \
	configure \
	stamp-h.in \
	build/compile \
	build/config.guess \
	build/config.sub \
	build/depcomp \
	build/install-sh \
	build/ltmain.sh \
	build/libtool.m4 \
	build/ltoptions.m4 \
	build/ltsugar.m4 \
	build/ltversion.m4 \
	build/lt~obsolete.m4 \
	build/missing \
	build/mkinstalldirs
