# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.54])

AC_INIT([ngs], [0.0.1], [sylvain foret at anu edu au])
AC_CONFIG_SRCDIR([src/libngs/ngs_fastq.h])
AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

# Checks for programs.

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_LIBTOOL
AM_PROG_CC_STDC
AM_PROG_LEX

#AC_CONFIG_MACRO_DIR([m4])

# Checks for pkg-config
### TODO

# Checks for libraries.

PKG_CHECK_MODULES(GLIB,
                  glib-2.0 >= 2.20.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

# Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST

# Checks for library functions.

AC_CHECK_FUNCS([strtol])

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_SUBST(gbpplugindir)

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	src/bin/Makefile
	src/libngs/Makefile
	src/test/Makefile
	])
AC_OUTPUT
